--- a/index.html
+++ b/index.html
@@ -43,31 +43,31 @@
                     <ul>
                         <li class="resume-item">ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
                             <ul>
+                                <li>Wrote JIRA stories and created mock-ups for single sign-on authentication</li>
                                 <li>Implemented Photoshop and InVision for Ebooks interface revisions</li>
-                                <li>Wrote JIRA stories and created mock-ups for single sign-on process</li>
-                                <li>Generated and analyzed remote user testing for Bowker MyIdentifier and proposed new information architecture for website</li>
-                                <li>Drafted UX presentation to marketing group and assisted with workshop. Received "Give a Wow-Values Our People" recognition from Marketing manager</li>
+                                <li>Analyzed remote user testing for Bowker MyIdentifier website and proposed new information architecture</li>
+                                <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw CTA response increase from 2 to >150 with next mailing.</li>
                             </ul></li>
                         <li class="resume-item">The University of Michigan Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
-                                <li>Played a key role in the design and communication for the U-M HomeLab research facility</li>
+                                <li>Played a key role in the U-M HomeLab construction design and communication</li>
                                 <li>Estimated research project costs, tracked time sheets, and invoiced expenses</li>
-                                <li>Assisted ISR web designer with the BioSocial Methods Collaborative website redesign</li>
+                                <li>Assisted ISR web designer with BioSocial Methods Collaborative website redesign</li>
                             </ul></li>
                         <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
-                                <li>Analyzed website and created a search engine optimization (<abbr>SEO</abbr>) deliverable</li>
+                                <li>Analyzed website for search engine optimization (<abbr>SEO</abbr>)</li>
                                 <li>Increased web traffic by 18% once recommendations were implemented</li>
                             </ul></li>
                         <li class="resume-item">Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span>
                             <ul>
-                                <li>Managed the A/R and A/P of this growing digital marketing company using Quickbooks</li>
+                                <li>Maintained the A/R and A/P of this growing digital marketing company</li>
                                 <li>Received Pure Visibility's "You Rock" award</li>
                             </ul></li>
                         <li class="resume-item">Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>
                             <ul>
-                                <li>Assisted with assessing client needs and selection of materials</li>
-                                <li>Maintained job cost accounting using FileMaker Pro</li>
+                                <li>Attended client meetings and assisted with material selection</li>
+                                <li>Maintained job cost accounting</li>
                                 <li>Planned and hosted open houses</li>
                                 <li>Created advertisements and fliers</li>
                             </ul></li>    
@@ -86,7 +86,7 @@
                         <li class="resume-item">U-M School of Information Masters Association<span>Treasurer&mdash;May 2016 to May 2017</span>
                             <ul>
                                 <li>Reported expenses and account balance at officer meetings</li>
-                                <li>Received a $500 <abbr title="University of Michigan">U-M</abbr> Central Student Government grant for year end gala</li>
+                                <li>Received a $500 U-M Central Student Government grant for year end gala</li>
                                 <li>Ended the fiscal year on target</li>
                             </ul>
                         </li> 
