--- a/wcc.html
+++ b/wcc.html
@@ -35,7 +35,7 @@
     <section class="two">
         <h2>Image Gallery</h2>
         <p>
-            Click on one of the images below to see some of my user interface designs within a lightbox. When you are finished viewing items, either click the "x" beneath the image or press the <abbr title="escape">Esc</abbr> key to exit.
+            Click on one of the images below to see some of my user interface designs within a lightbox. When you are finished viewing items, either click the "x" beneath the image or press the 'Escape' key to exit.
         </p>
         <br>
     <div class="gallery container">
