--- a/umsi.html
+++ b/umsi.html
@@ -29,20 +29,20 @@
     </header> 
     <main id="main">
        <section class="intro">
-            <h1>University of Michigan School of Information<br><span>Master of Science in Information Candidate</span></h1>
+            <h1>University of Michigan School of Information<br><span>Master's of Science in Information Candidate</span></h1>
             <p>
-                The University of Michigan School of Information (<abbr>UMSI</abbr>) has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (<abbr>SIMA</abbr>), I have participated in the projects and activities highlighted below.
+                The University of Michigan School of Information (UMSI) has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (SIMA), I have participated in the projects and activities highlighted below.
             </p>
         </section>
         <section class="two">
-            <h2><abbr title="University of Michigan School of Information">UMSI</abbr> Design Clinic</h2>
+            <h2>UMSI Design Clinic</h2>
             <p>
-                I volunteered as an apprentice with the <abbr title="University of Michigan School of Information">UMSI</abbr> Design Clinic on a project for a local mechanical engineering company. Our team created a user interface for a new software system and took second place in the end-of-year Design Clinic award ceremony. I contributed significantly to the brainstorming, information architecture, and wireframe creation.
+                I volunteered as an apprentice with the UMSI Design Clinic on a project for a local mechanical engineering company. Our team created a user interface for a new software system and took second place in the end-of-year Design Clinic award ceremony. I contributed significantly to brainstorming facilitation, information architecture, and wireframe creation.
             </p>
             <div class="tile-container">
                 <figure class="tile">
                         <img src="images/design-clinic-whiteboard.jpg" alt="the Design Clinic team at a whiteboard containing sketched out wireframes">
-                        <figcaption>The <abbr title="Computational Sciences Experts Group">CSEG</abbr> team after a design session</figcaption>
+                        <figcaption>The CSEG team after a design session</figcaption>
                 </figure>
                 <figure class="tile">
                         <img src="images/design-clinic-wireframe.jpg" alt="a wireframe of the main user interface">
@@ -57,7 +57,7 @@
         <section class="three">
             <h2>Astronomy Archive</h2>
             <p>
-                During the Fall 2017 semester I worked with three other students to create <a href="https://michiganastronomypics.omeka.net/home-page">an online astronomy archive</a>. The project required accessing resources at the <abbr title="University of Michigan">U-M</abbr> Bentley Library. We originally thought we could combine our interests in astronomy and cosmology, but soon learned that the Bentley did not hold sufficient materials on cosmology. Our focus then shifted to the history of astronomy at the University of Michigan and targeted high school and middle school teachers and students as users. 
+                During the Fall 2017 semester I worked with three other students to create <a href="https://michiganastronomypics.omeka.net/home-page">an online astronomy archive</a>. The project required accessing resources at the U-M Bentley Library. We originally thought we could combine our interests in astronomy and cosmology, but soon learned that the Bentley did not hold sufficient materials on cosmology. Our focus then shifted to the history of astronomy at the University of Michigan and targeted high school and middle school teachers and students as users. 
             </p>
             <p>
                 I contributed the majority of the imagery through research at the Bentley museum and online collection. I also created the “Directors of the Detroit Observatory” timeline and website wireframes. Our site's structure was limited by the Omeka software.
@@ -73,22 +73,22 @@
 
         </section>
         <section class="four">
-            <h2>Information Architecture (<abbr>IA</abbr>) Summit&mdash;Poster Presentation</h2>
+            <h2>Information Architecture (IA) Summit&mdash;Poster Presentation</h2>
             <p>
-                I learned about Laban Movement Analysis while auditing a class on Engineering Applications of Media Technology. The professor recommended we attend a lecture by a visiting music professor who had used Laban methodologies to evaluate musicianship. I was intrigued by the concept and reseached the topic for possible application in human-computer interaction. I learned that it is being used in the field of robotics and there is a growing awareness for the design of mixed reality and wearable computing. I presented a poster at the 2016 <abbr title="information architecture">IA</abbr> Summit in Atlanta, and received a <abbr title="University of Michigan School of Information">UMSI</abbr> travel grant to attend.
+                I learned about Laban Movement Analysis while auditing a class on Engineering Applications of Media Technology. The professor recommended we attend a lecture by a visiting music professor who had used Laban methodologies to evaluate musicianship. I was intrigued by the concept and reseached the topic for possible application in human-computer interaction. I learned that it is being used in the field of robotics and there is a growing awareness for the design of mixed reality and wearable computing. I presented a poster at the 2016 IA Summit in Atlanta, and received a travel grant from UMSI to attend.
             </p>
             <figure>
                     <img src="images/umsi-laban-poster.jpg" alt="illustrations to convey Laban concepts of movement">
-                    <figcaption>A poster presented at the 2016 <abbr title="information architecture">IA</abbr> Summit on Laban Movement Analysis and Labanotation</figcaption>
+                    <figcaption>A poster presented at the 2016 IA Summit on Laban Movement Analysis and Labanotation</figcaption>
             </figure>
 
         </section>
         <section class = "five"> 
                 <h2>Alternative Spring Break Photo Gallery</h2>
                 <p>
-                    Each year the <abbr title="University of Michigan">U-M</abbr> School of Information arranges volunteer opportunities for Masters students during the week of Spring Break. In 2017 I joined the group traveling to Washington, <abbr title="District of Columbia">DC</abbr> where I and another student assisted the American Library Association with taking photos of the city for social media use.
+                    Each year the U-M School of Information arranges volunteer opportunities for Masters students during the week of Spring Break. In 2017 I joined the group traveling to Washington, DC where I and another student assisted the American Library Association with taking photos of the city for social media use.
 
-                    Click on one of the images below to see some of my photographs within a lightbox. When you are finished viewing items, either click the "x" beneath the image or press the <abbr title="escape">Esc</abbr> key to exit.
+                    Click on one of the images below to see some of my photographs within a lightbox. When you are finished viewing items, either click the "x" beneath the image or press the 'Escape' key to exit.
                 </p>
                 <br>
             <div class="gallery container">
