--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                                 <li>Wrote JIRA stories and created mock-ups for single sign-on authentication</li>
                                 <li>Implemented Photoshop and InVision for Ebooks interface revisions</li>
                                 <li>Analyzed remote user testing for Bowker MyIdentifier website and proposed new information architecture</li>
-                                <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw CTA response increase from 2 to >150 with next mailing.</li>
+                                <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw response increase from 2 to >150.</li>
                             </ul></li>
                         <li class="resume-item">The University of Michigan Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
-                                <li>Played a key role in the U-M HomeLab construction design and communication</li>
-                                <li>Estimated research project costs, tracked time sheets, and invoiced expenses</li>
-                                <li>Assisted ISR web designer with BioSocial Methods Collaborative website redesign</li>
+                                <li>Played a key role in the U-M HomeLab design and construction</li>
+                                <li>Estimated research projects, tracked time sheets, and invoiced expenses</li>
+                                <li>Assisted ISR web developer with BioSocial Methods Collaborative website redesign</li>
                             </ul></li>
                         <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
@@ -80,20 +80,20 @@
                     <ul>
                         <li class="resume-item">U-M Library Student Advisory Committee<span>Member&mdash;May 2017 to May 2018</span>
                             <ul>
-                                <li>Selected to contribute feedback on library resources</li>
+                                <li>Selected to provide feedback on library resources</li>
                             </ul>
                         </li> 
                         <li class="resume-item">U-M School of Information Masters Association<span>Treasurer&mdash;May 2016 to May 2017</span>
                             <ul>
                                 <li>Reported expenses and account balance at officer meetings</li>
-                                <li>Received a $500 U-M Central Student Government grant for year end gala</li>
-                                <li>Ended the fiscal year on target</li>
+                                <li>Received $500 U-M Central Student Government grant for year end gala</li>
+                                <li>Ended fiscal year on target</li>
                             </ul>
                         </li> 
                         <li class="resume-item">U-M School of Information Design Clinic<span>Apprentice&mdash;January 2016 to May 2016</span>
                             <ul>
-                                <li>Assisted with the design of a Mechanical Engineering software interface</li>
-                                <li>Received 2nd Place team award in year-end competition</li>
+                                <li>Participated in design of a Mechanical Engineering software interface</li>
+                                <li>Received UMSI second place team award in year-end competition</li>
                             </ul>
                         </li> 
                         <li class="resume-item">U-M Depression Education Resource Center<span>Student Librarian&mdash;January 2016 to May 2016</span>
@@ -106,7 +106,7 @@
                     <ul>
                         <li class="resume-item">Dexter High School Robotics Team<span>Mentor&mdash;September 2014 to May 2016</span>
                             <ul>
-                                <li>Initiated the redesign of the team website</li>
+                                <li>Initiated redesign of the team website</li>
                                 <li>Mentored students on user experience concepts</li>
                                 <li>Received certification on metal mill, plasma cutter, drills, and saws</li>
                             </ul>
