--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="intro">
             <h1>Adrienne Royce<span>Welcome</span></h1>
             <p>
-                You'll find my resum&eacute; and career highlights on this website. <a href="isr.html" title="Institute for Social Research">ISR</a> contains samples from work as a lab manager at the University of Michigan (U-M) Institute for Social Research. <a href="umsi.html">UMSI</a> will take you to my projects as a student at the University of Michigan School of Information. <a href="wcc.html" title="Washtenaw Community College">WCC</a> displays user interface projects from classes at Washtenaw Community College.
+                You'll find my resum&eacute; and career highlights on this website. <a href="isr.html" title="Institute for Social Research">ISR</a> contains samples from work as a lab manager at the University of Michigan Institute for Social Research. <a href="umsi.html">UMSI</a> will take you to my projects as a student at the University of Michigan School of Information. <a href="wcc.html" title="Washtenaw Community College">WCC</a> displays user interface projects from classes at Washtenaw Community College.
             </p>    
         </section>
         <section class="two">
