--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                                 <li>Wrote JIRA stories and created mock-ups for single sign-on authentication</li>
                                 <li>Implemented Photoshop and InVision for Ebooks interface revisions</li>
                                 <li>Analyzed remote user testing for Bowker MyIdentifier website and proposed new information architecture</li>
-                                <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw response increase from 2 to >150.</li>
+                                <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw response increase from 2 to >150</li>
                             </ul></li>
                         <li class="resume-item">The University of Michigan Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
                             <ul>
                                 <li>Played a key role in the U-M HomeLab design and construction</li>
                                 <li>Estimated research projects, tracked time sheets, and invoiced expenses</li>
-                                <li>Assisted ISR web developer with BioSocial Methods Collaborative website redesign</li>
+                                <li>Assisted ISR developer with BioSocial Methods Collaborative website redesign</li>
                             </ul></li>
                         <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
@@ -98,8 +98,9 @@
                         </li> 
                         <li class="resume-item">U-M Depression Education Resource Center<span>Student Librarian&mdash;January 2016 to May 2016</span>
                             <ul>
-                                <li>Assisted patrons with questions</li>
                                 <li>Reorganized library resources</li>
+                                <li>Assisted patrons with questions</li>
+
                             </ul>
                         </li> 
                     </ul>
