--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
                     <ul>
                         <li class="resume-item">ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
                             <ul>
-                                <li>Wrote JIRA stories and created mock-ups for single sign-on authentication</li>
+                                <li>Wrote JIRA stories, created Axure mock-ups, and ran user testing with Validately for single sign-on authentication process</li>
                                 <li>Implemented Photoshop and InVision for Ebooks interface revisions</li>
                                 <li>Analyzed remote user testing for Bowker MyIdentifier website and proposed new information architecture</li>
+                                <li>Helped update user interactions for Anthropological Fieldworks Online</li>
                                 <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw response increase from 2 to >150</li>
                             </ul></li>
                         <li class="resume-item">The University of Michigan Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
@@ -53,6 +54,7 @@
                                 <li>Played a key role in the U-M HomeLab design and construction</li>
                                 <li>Estimated research projects, tracked time sheets, and invoiced expenses</li>
                                 <li>Assisted ISR developer with BioSocial Methods Collaborative website redesign</li>
+                                <li>Helped design studies and run participants for Proctor & Gamble research</li>
                             </ul></li>
                         <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
                             <ul>
@@ -78,7 +80,13 @@
                 <h3 class="accordionItemHeading">Volunteer Experience</h3>
                 <div class="accordionItemContent">
                     <ul>
-                        <li class="resume-item">U-M Library Student Advisory Committee<span>Member&mdash;May 2017 to May 2018</span>
+                        <li class="resume-item">U-M School of Information<span>SOCHI Officer&mdash;May 2019 to present</span>
+                            <ul>
+                                <li>Serving as student liason to the UMSI Career Development Office</li>
+                            </ul>
+                        </li> 
+                        
+                        <li class="resume-item">U-M Library Student Advisory Committee<span>Member&mdash;May 2018 to May 2019</span>
                             <ul>
                                 <li>Selected to provide feedback on library resources</li>
                             </ul>
