--- a/umsi.html
+++ b/umsi.html
@@ -31,7 +31,7 @@
        <section class="intro">
             <h1>University of Michigan School of Information<br><span>Master's of Science in Information Candidate</span></h1>
             <p>
-                The University of Michigan School of Information (UMSI) has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (SIMA), I have participated in the projects and activities highlighted below.
+                The University of Michigan School of Information (UMSI) has provided a number of wonderful opportunities. In addition to serving as Treasurer for the School of Information Masters Association (SIMA) and Career Developement Office (CDO) Liaison for the Student Organization for Computer-Human Interaction (SOCHI), I have participated in the projects and activities highlighted below.
             </p>
         </section>
         <section class="two">
@@ -55,6 +55,31 @@
             </div>
         </section>
         <section class="three">
+            <h2>SI582: Interaction Design class</h2>
+            <p>
+                All the work for this class was done on an individual basis, but incorporated feedback from classmates. I created an Axure prototype of a desktop application for <a href="https://77grqa.axshare.com/" target="_blank">my final project</a>. It was designed to help worship leaders create and share music and playlists with their worship teams.
+            </p>
+            <p>
+                To create this project, I completed a series of exercises including ideation sketching, competetive analysis, personas, and paper prototyping. <a href="https://www.youtube.com/watch?v=h1Dwz6QgesA" target="_blank">See a short (highly edited and somewhat entertaining) video of the paper prototype</a>.
+            </p>
+            <figure>
+                    <img src="images/prototype-sketches.jpg" alt="Eight ideas for tools to help singers learn lyrics to a playlist of songs.">
+                    <figcaption>Ideation sketching to push the boundaries of possible solutions.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/si582-persona.jpg" alt="Persona of a young, female worship leader.">
+                <figcaption>One of four personas created to guide design and development of the software.</figcaption>
+            </figure>
+            <figure>
+                <img src="images/QOC-diagram.jpg" alt="A three-column diagram to weigh interaction design options for finding songs, creating playlists, and submitting new songs">
+                <figcaption>A Questions, Options, and Criteria Diagram.</figcaption>
+            </figure>
+            <figure>
+                    <img src="images/paper-prototype.jpg" alt="screenshot from the paper prototyping video">
+                    <figcaption>A screenshot of the paper prototype demonstration.</figcaption>
+            </figure>                    
+        </section>
+        <section class="four">
             <h2>Astronomy Archive</h2>
             <p>
                 During the Fall 2017 semester I worked with three other students to create <a href="https://michiganastronomypics.omeka.net/home-page">an online astronomy archive</a>. The project required accessing resources at the U-M Bentley Library. We originally thought we could combine our interests in astronomy and cosmology, but soon learned that the Bentley did not hold sufficient materials on cosmology. Our focus then shifted to the history of astronomy at the University of Michigan and targeted high school and middle school teachers and students as users. 
@@ -72,7 +97,7 @@
             </figure>                    
 
         </section>
-        <section class="four">
+        <section class="five">
             <h2>Information Architecture (IA) Summit&mdash;Poster Presentation</h2>
             <p>
                 I learned about Laban Movement Analysis while auditing a class on Engineering Applications of Media Technology. The professor recommended we attend a lecture by a visiting music professor who had used Laban methodologies to evaluate musicianship. I was intrigued by the concept and reseached the topic for possible application in human-computer interaction. I learned that it is being used in the field of robotics and there is a growing awareness for the design of mixed reality and wearable computing. I presented a poster at the 2016 IA Summit in Atlanta, and received a travel grant from UMSI to attend.
@@ -83,7 +108,7 @@
             </figure>
 
         </section>
-        <section class = "five"> 
+        <section class = "six"> 
                 <h2>Alternative Spring Break Photo Gallery</h2>
                 <p>
                     Each year the U-M School of Information arranges volunteer opportunities for Masters students during the week of Spring Break. In 2017 I joined the group traveling to Washington, DC where I and another student assisted the American Library Association with taking photos of the city for social media use.
