--- a/wcc.html
+++ b/wcc.html
@@ -47,6 +47,24 @@
         <a href="images/market-basket.jpg" aria-label="go to enlarged photo of Market Basket hompage" data-lightbox="portfolio-UI" data-title="UI Portfolio: A three-bucket webpage redesign"><img src="images/tile-market-basket.jpg" class="mix " alt="The redesigned homepage for a grocery store"></a>
         </div>
     </section>
+    <section class="three">
+        <h2>User Experience III Final Class Project</h2>
+        <p>
+            For this individual project, I had to create the use cases and wireframes for a scientific, futuristic, hand-held research device. The <a href="pdfs/spectrometer-prototype.pdf" target="_blank">prototype specifications</a> are designed for use in fieldwork data collection on plants and animals using a laser and sensors.
+        </p>
+        <br>
+    <div class="gallery container">
+        <a href="images/field-tool-2-and-3.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the exterior top and side views."><img src="images/field-tool-2-and-3.png" alt=""></a>
+        <a href="images/field-tool-1.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the exterior front view."><img src="images/field-tool-1.png" alt=""></a>
+		<a href="images/field-tool-4.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the data screen showing a simple analysis."><img src="images/field-tool-4.png" alt=""></a>
+		<a href="images/field-tool-5.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the data screen showing a complex analysis."><img src="images/field-tool-5.png" alt=""></a>
+        <a href="images/field-tool-6.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the screen for taking notes."><img src="images/field-tool-6.png" alt=""></a>
+        <a href="images/field-tool-7.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the audio/visual screen."><img src="images/field-tool-7.png" alt=""></a>
+        <a href="images/field-tool-8.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the 'Save File' window."><img src="images/field-tool-8.png" alt=""></a>
+        <a href="images/field-tool-9.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the search screen."><img src="images/field-tool-9.png" alt=""></a>
+        <a href="images/field-tool-10.png" aria-label="go to enlarged image" data-lightbox="portfolio-UX" data-title="UX III Final Project: the search results screen."><img src="images/field-tool-10.png" alt=""></a>
+        </div>
+    </section>
 
     <aside>
         <img class="landmark" src="images/ui-snowfarm-sm.jpg" alt="A screenshot from the index page of my Snow Farm website redesign">
