--- a/index.html
+++ b/index.html
@@ -1,169 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="shortcut icon" type="image/jpg" href="images/tree-favicon.jpg"/>
-    <link rel="stylesheet" type="text/css" href="css/default.css">
-    <link rel="stylesheet" type="text/css" href="css/royce.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Home&mdash;Aroyce</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-
+    <meta charset="utf-8" />
+    <title>Adrienne Royce WCC Student Projects</title>
+    <link href='http://fonts.googleapis.com/css?family=Lato:700' rel='stylesheet' type='text/css' />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta name="description" content="A sample of projects created for Interface Design I & II." />
+    <meta name="robots" content="noindex,nofollow" />
+  <!-- Author: Adrienne Royce -->
 </head>
+
 <body>
-    <header>
-        <a id="top-section" class="jump-nav" href="#main">Jump to main content</a>
-        <nav>
-            <ul>
-                <li class="onpage">Home</li>
-                <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
-                <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
-                <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
-            </ul>
-        </nav>  
-
-    </header> 
-    <main id="main">
-        <section class="intro">
-            <h1>Adrienne Royce<span>Welcome</span></h1>
-            <p>
-                You'll find my resum&eacute; and career highlights on this website. <a href="isr.html" title="Institute for Social Research">ISR</a> contains samples from work as a lab manager at the University of Michigan Institute for Social Research. <a href="umsi.html">UMSI</a> will take you to my projects as a student at the University of Michigan School of Information. <a href="wcc.html" title="Washtenaw Community College">WCC</a> displays user interface projects from classes at Washtenaw Community College.
-            </p>    
-        </section>
-        <section class="two">
-            <h2>Resum&eacute;</h2>
-            <div class="accordionWrapper"> <!--start accordion-->
-                <div class="accordionItem open"> <!--start accordion open-->
-                <h3 class="accordionItemHeading">Work Experience</h3>
-                <div class="accordionItemContent">
-                    <ul>
-                        <li class="resume-item">ProQuest<span>User Experience Intern&mdash;June 2018 to present</span>
-                            <ul>
-                                <li>Wrote JIRA stories, created Axure mock-ups, and ran user testing with Validately for single sign-on authentication process</li>
-                                <li>Implemented Photoshop and InVision for Ebooks interface revisions</li>
-                                <li>Analyzed remote user testing for Bowker MyIdentifier website and proposed new information architecture</li>
-                                <li>Helped update user interactions for Anthropological Fieldworks Online</li>
-                                <li>Drafted UX presentation and assisted with workshop for Marketing department. Received "Give a Wow-Values Our People" recognition. European team saw response increase from 2 to >150</li>
-                            </ul></li>
-                        <li class="resume-item">The University of Michigan Institute for Social Research<span>BioSocial Methods Collaborative Lab Manager&mdash;June 2016 to June 2018</span>
-                            <ul>
-                                <li>Played a key role in the U-M HomeLab design and construction</li>
-                                <li>Estimated research projects, tracked time sheets, and invoiced expenses</li>
-                                <li>Assisted ISR developer with BioSocial Methods Collaborative website redesign</li>
-                                <li>Helped design studies and run participants for Proctor & Gamble research</li>
-                            </ul></li>
-                        <li class="resume-item">The Understanding Group<span>SEO Intern&mdash;May 2014 to August 2014</span>
-                            <ul>
-                                <li>Analyzed website for search engine optimization (<abbr>SEO</abbr>)</li>
-                                <li>Increased web traffic by 18% once recommendations were implemented</li>
-                            </ul></li>
-                        <li class="resume-item">Pure Visibility<span>Independent Bookkeeper&mdash;August 2006 to February 2007</span>
-                            <ul>
-                                <li>Maintained the A/R and A/P of this growing digital marketing company</li>
-                                <li>Received Pure Visibility's "You Rock" award</li>
-                            </ul></li>
-                        <li class="resume-item">Rochman Design-Build<span>Assistant Designer &amp; Office Manager&mdash;May 1996 to February 2000</span>
-                            <ul>
-                                <li>Attended client meetings and assisted with material selection</li>
-                                <li>Maintained job cost accounting</li>
-                                <li>Planned and hosted open houses</li>
-                                <li>Created advertisements and fliers</li>
-                            </ul></li>    
-                    </ul>
-                </div><!--end accordion item content-->
-                </div> <!--end accordion open-->
-                <div class="accordionItem close">
-                <h3 class="accordionItemHeading">Volunteer Experience</h3>
-                <div class="accordionItemContent">
-                    <ul>
-                        <li class="resume-item">U-M School of Information<span>SOCHI Officer&mdash;May 2019 to present</span>
-                            <ul>
-                                <li>Serving as student liason to the UMSI Career Development Office</li>
-                            </ul>
-                        </li> 
-                        
-                        <li class="resume-item">U-M Library Student Advisory Committee<span>Member&mdash;May 2018 to May 2019</span>
-                            <ul>
-                                <li>Selected to provide feedback on library resources</li>
-                            </ul>
-                        </li> 
-                        <li class="resume-item">U-M School of Information Masters Association<span>Treasurer&mdash;May 2016 to May 2017</span>
-                            <ul>
-                                <li>Reported expenses and account balance at officer meetings</li>
-                                <li>Received $500 U-M Central Student Government grant for year end gala</li>
-                                <li>Ended fiscal year on target</li>
-                            </ul>
-                        </li> 
-                        <li class="resume-item">U-M School of Information Design Clinic<span>Apprentice&mdash;January 2016 to May 2016</span>
-                            <ul>
-                                <li>Participated in design of a Mechanical Engineering software interface</li>
-                                <li>Received UMSI second place team award in year-end competition</li>
-                            </ul>
-                        </li> 
-                        <li class="resume-item">U-M Depression Education Resource Center<span>Student Librarian&mdash;January 2016 to May 2016</span>
-                            <ul>
-                                <li>Reorganized library resources</li>
-                                <li>Assisted patrons with questions</li>
-
-                            </ul>
-                        </li> 
-                    </ul>
-                    <ul>
-                        <li class="resume-item">Dexter High School Robotics Team<span>Mentor&mdash;September 2014 to May 2016</span>
-                            <ul>
-                                <li>Initiated redesign of the team website</li>
-                                <li>Mentored students on user experience concepts</li>
-                                <li>Received certification on metal mill, plasma cutter, drills, and saws</li>
-                            </ul>
-                        </li> 
-                        <li class="resume-item">Ann Arbor Christian School<span>Various&mdash;September 2005 to June 2014</span>
-                            <ul>
-                                <li>Facilitated weekly parent meetings</li>
-                                <li>Supported staff during classes, fieldtrips, and lunches</li>
-                                <li>Volunteered in school library</li>
-                            </ul>
-                        </li> 
-                    </ul>
-                </div><!--end volunteer experience panel-->
-            </div> <!--end accordion item close-->
-            </div> <!--end accordion wrapper-->
-    </section>
-    <aside>
-        <img class="landmark" src="images/umsi-headshot.jpg" alt="Adrienne's headshot"> 
-        <button onclick="topFunction()" id="myBtn" ><a href="#top-section"  aria-label="to top of page">To Top</a></button>
-    </aside>
-    </main>
-
-    <footer>
+<h1>Adrienne Royce<br /><span>A hand-coded student portfolio</span></h1>
+<div id="projectlistings">
+     <h2>Photoshop Mockups</h2>
+     <p>These mockups were created in Photoshop while enrolled in Interface Design I & II. Website URL's for the index
+     pages were assigned by the instructor.</p>
         <ul>
-            <li><strong>Navigation:</strong><br></li>
-            <li>Home</li>
-            <li><a href="isr.html" title="Institute for Social Research">ISR</a></li>
-            <li><a href="umsi.html" title="University of Michigan School of Information">UMSI</a></li>
-            <li><a href="wcc.html" title="Washtenaw Community College">WCC</a></li>
-        </ul>
-        <ul class="footer-right">
-            <li><strong>External Links:</strong><br></li>
-            <li>
-                <a href="https://twitter.com/WindSweptTree" target="_blank" title="to Twitter page" aria-label="to Twitter page"><i class="fab fa-twitter-square"></i>@WindSweptTree
-                </a>
-            </li>
-            <li>
-                <a href="https://www.linkedin.com/in/adrienneroyce/" target="_blank" title="to LinkedIn profile"><i class="fab fa-linkedin"></i>LinkedIn profile
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/aroyce" target="_blank" title="to Github profile">
-                    <i class="fab fa-github"></i>Github page
-                </a>
-            </li>
-        </ul>
-    </footer>
-<script src="js/main.js"></script>
+           <li><a href="ixd/PanacheBridal.html">Panache Bridal</a>In this long-and-flat index page redesign for
+           www.panachebridals.com, I had to meet the challenge of using the color green and incorporating the theme of 
+           outer space.</li>
+          <li><a href="ixd/PanacheBridalMoodBoard.html">Panache Bridal Mood Board</a>Aliens and space ships didn't seem 
+         suitable for a high-end Southern California bridal store. So as I created this mood board,
+           I took inspiration from the ancient mariners who gazed up at the stars.</li>
+       	  <li><a href="ixd/SnowFarm.html">Snow Farm</a> The redesign of the index page for www.snowfarm.org,
+       	  a New England art camp and retreat center, required maintaining the organization's logo 
+       	  and creating a more personable tone.</li>
+      	  <li><a href="ixd/AffordableTours.html">Affordable Tours</a> This assignment focused on discerning an
+      	  industry standard for the design layout. After exploring dozens of tourism webpages, I had
+      	  to emulate one of them. The photos for this redesign of www.affordabletours.com are from my own travels.</li>
+       	  <li><a href="ixd/MarketBasket.html">Market Basket</a> A three-bucket index page redesign plus two advertising layouts.</li>
+       	  <li><a href="ixd/MossLove.html">Moss Love Terrarium</a> I established the primary persona for this dominant photo 
+       	  index page redesign as a young woman seeking gifts for her bridal party.</li>
+      	</ul>
+     <h2>User Experience Deliverables</h2>
+        <ul>
+       	  <li><a href="ux/CardSortDeliverable.pdf" target="_blank">Card Sort (PDF)</a> for the National Park Service.</li>
+       	  <li><a href="ux/CompetitiveAnalysis.pdf" target="_blank">Competitive Analysis (PDF)</a> for a fictitious real estate company.</li>
+       	  <li><a href="ux/DeltaTaskAnalysis.pdf" target="_blank">Task Analysis & Storyboards (PDF)</a> for Delta Airlines.</li>
+          <li><a href="ux/HelpDeskUseCases.pdf" target="_blank">Dashboard UI Design (PDF)</a> with use cases for a fictitious Help Desk.</li>
+       	  <li><a href="ux/MTA-Usability.pdf" target="_blank">Usability Testing (PDF)</a> for the Maryland Transportation Authority.</li>
+          <li><a href="ux/WCCAdmissions.pdf" target="_blank">User Interface Redesign (PDF)</a> of the WCC admissions form.</li>
+       	  <li><a href="ux/OntarioScienceCenter.pdf" target="_blank">Accessibility Evaluation (PDF)</a> for the Ontario Science Center.</li>
+          <li><a href="ux/ArtfairDiagram.pdf" target="_blank">Site Diagram (PDF)</a> for the Ann Arbor Art Fair website.</li>
+      	</ul>
 
+     <h2>Web Coding in HTML and CSS</h2>
+	  <ul>
+		<li><a href="web210/projects/aroyce-final/final-project.html">Final Project - 12/15/14</a>
+      	 I was required to find a royalty-free PSD file and convert it into a responsive design. 
+          The instructor asked permission to show the file to future classes. Time spent: Approximately 50 hours.
+       </li>   
+   		<li><a href="web210/projects/aroyce-sass/index.html">SASS Project - 11/12/14</a>
+      	 The instructor provided a JPG file and design specifications. I used Scout to compile the css. Time spent: Approximately 13 hours.
+      	</li>  
+		<li><a href="web210/projects/aroyce-responsive/index.html">Responsive Design Project - 10/29/14</a>
+        This assignment adds responsive layouts to the 10/15/14 HTML5 project. Time spent on project: Approximately 8 hours.
+    	  </li>  
+  		 <li><a href="web210/projects/aroyce-elements/index.html">HTML5 Elements Project - 10/15/14</a>
+   		The instructor provided a JPG file and design specifications. This project was our first introduction to HTML5 coding.
+   		Time spent: Approximately 14 hours.
+    	</li>
+    	<li><a href="web210/projects/aroyce-form/index.html">Form Project - 10/08/14</a>
+        The instructor provided a JPG file and design specifications. Form fields had to execute the instructors desired responses.
+        Time spent on project: Approximately 12 hours.
+    	</li>
+    	<li><a href="web210/projects/aroyce-email/index.html">HTML Email Project - 10/01/14</a>
+        We revisited table layouts in order to code an HTML email message. The instructor provided a JPG 
+        file and design specifications. Time spent: Approximately 9 hours.
+    	</li>
+    	<li><a href="web210/projects/aroyce-liquid/index.html">Liquid Center Project - 09/22/14</a>
+        The instructor provided a JPG file and design specifications. Time spent: Approximately 25 hours.
+		</li>
+    	<li><a href="web210/projects/aroyce-position/index.html">Position Project - 09/17/14</a>
+        The instructor provided a JPG file and design specifications.Time spent: Approximately 40 hours.
+        </li>
+       </ul>
+
+</div><!--end of project listings--> 
 </body>
 </html>
